Adicionando links no arquivo HTML

--- a/fundamentos/bloco-3-intro-html-css/bloco3-day1/index.html
+++ b/fundamentos/bloco-3-intro-html-css/bloco3-day1/index.html
@@ -6,15 +6,40 @@
     </head>
     <body>
         <h1>Exercícios</h1>
+        <a href="https://www.google.com.br/" target="_blank">Acesse o google.</a>
         <ol>
-        <li>Richard</li>
-        <li>Gustavo</li>
-        <li>Mateus</li>
-        <li>Vinicius</li>
+        <li><a href="#Richard">Richard</a></li>
+        <li><a href="#Gustavo">Gustavo</a></li>
+        <li><a href="#Mateus">Mateus</a></li>
+        <li><a href="#Vinicius">Vinivius</a></li>
         </ol>
         <img src=
         "https://medias.cnnbrasil.com.br/representacao-artistica-do-buraco-negro-j2157.jpeg?format=JPEG&image=https://mediastorage.cnnbrasil.com.br/IMAGES/00/00/00/8339_AC538FB7C42E95EE.jpg&width=804&height=452&resize=CROP" 
         alt="Buraco negro no espaço" width="300px">
         <img src="FotoLKD.jpeg" alt="Henrique Martins, um grande Homem!" width="300px">
+        <p id="Richard"> Not Found Not Found Not Found Not Found <br>
+            Not Found Not Found Not Found Not Found <br>
+            Not Found Not Found Not Found Not Found <br>
+            Not Found Not Found Not Found Not Found <br>
+            Not Found Not Found Not Found Not Found <br>
+            Not Found Not Found Not Found Not Found <br></p>
+        <p id="Gustavo"> Not Found Not Found Not Found Not Found <br>
+            Not Found Not Found Not Found Not Found <br>
+            Not Found Not Found Not Found Not Found <br>
+            Not Found Not Found Not Found Not Found <br>
+            Not Found Not Found Not Found Not Found <br>
+            Not Found Not Found Not Found Not Found <br></p>
+        <p id="Mateus"> Not Found Not Found Not Found Not Found <br>
+            Not Found Not Found Not Found Not Found <br>
+            Not Found Not Found Not Found Not Found <br>
+            Not Found Not Found Not Found Not Found <br>
+            Not Found Not Found Not Found Not Found <br>
+            Not Found Not Found Not Found Not Found <br></p>
+        <p id="Vinicius"> Not Found Not Found Not Found Not Found <br>
+            Not Found Not Found Not Found Not Found <br>
+            Not Found Not Found Not Found Not Found <br>
+            Not Found Not Found Not Found Not Found <br>
+            Not Found Not Found Not Found Not Found <br>
+            Not Found Not Found Not Found Not Found <br></p>
     </body>
 </html>
