Adiciona novos stylos CSS

--- a/fundamentos/bloco-3-intro-html-css/bloco3-day2/Primeiros-PassosCSS.html
+++ b/fundamentos/bloco-3-intro-html-css/bloco3-day2/Primeiros-PassosCSS.html
@@ -6,13 +6,37 @@
         <style>
             h1 {
                 color: orange;
-                font-size: 65;
+                font-size: 65px;
+                font-family: sans-serif;
+            }
+            p{
+                font-weight: 600;
+                font-size: 3em;
+            }
+            body {
+                font-size: 16px;
             }
             ul {
                 background-color: red;
+                font-style: italic;
+                line-height: 40px;
+                text-align: center;
+                text-decoration: overline;
+
+
+
             }
             .Cor_lista{
                 background-color: rgb(33, 164, 124);
+            }
+            #amarelo {
+                background-color: yellow;
+            }
+            #vermelho {
+                background-color: red;
+            }
+            #marrom {
+                background-color: brown;
             }
 
         </style>
@@ -21,9 +45,9 @@
         <h1>Exercícios 3.2</h1>
         <p class="Cor_lista">Qual sua cor favorita?</p>
         <ul class="Cor_lista">
-            <li>Amarelo</li>
-            <li>Vermelho</li>
-            <li>Marrom</li>
+            <li id="amarelo">Amarelo</li>
+            <li id="vermelho">Vermelho</li>
+            <li id="marrom">Marrom</li>
         </ul>
     </body>
 </html>
