--- a/fundamentos/bloco-3-intro-html-css/bloco3-day2/Primeiros-PassosCSS.html
+++ b/fundamentos/bloco-3-intro-html-css/bloco3-day2/Primeiros-PassosCSS.html
@@ -3,43 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <title>HTML</title>
-        <style>
-            h1 {
-                color: orange;
-                font-size: 65px;
-                font-family: sans-serif;
-            }
-            p{
-                font-weight: 600;
-                font-size: 3em;
-            }
-            body {
-                font-size: 16px;
-            }
-            ul {
-                background-color: red;
-                font-style: italic;
-                line-height: 40px;
-                text-align: center;
-                text-decoration: overline;
+        <link rel="stylesheet" type="text/css" href="style.css">
+        
 
-
-
-            }
-            .Cor_lista{
-                background-color: rgb(33, 164, 124);
-            }
-            #amarelo {
-                background-color: yellow;
-            }
-            #vermelho {
-                background-color: red;
-            }
-            #marrom {
-                background-color: brown;
-            }
-
-        </style>
     </head>
     <body>
         <h1>Exercícios 3.2</h1>
