--- a/fundamentos/bloco-3-intro-html-css/bloco3-day4/index2.html
+++ b/fundamentos/bloco-3-intro-html-css/bloco3-day4/index2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
   <head>
-      <title>Stomatopoda</title>
+    <title>Stomatopoda</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
   </head>
@@ -22,9 +22,9 @@
     </div>
     <div>
         <main>
-            <article>
-                <h3>Fatos sobre o Stomatopoda!</h3>
-                <section>
+            <section>
+                <h2>Fatos sobre o Stomatopoda!</h2>
+                <article>
                     <ul>
                         <li>Nome cinentífico: <em>Odontodactylus scyllarus</em></li>
                         <li>Reino: Animalia;</li>
@@ -34,22 +34,40 @@
                         <li>Subclasse: Hoplocarida;</li>
                         <li>Ordem: Stomatopoda, latreille, 1817.</li>
                     </ul>
-                </section>
-                <section>
-                    <h4>Descrição.</h4>
+                </article>
+                <article>
+                    <h3>Descrição.</h3>
                         <p>Os estomatópodes são predadores ativos que caçam presas com o auxílio de um sentido de visão muito apurado e capaz de interpretar polarização no espectro ultravioleta e infravermelho).<br>
                             Apresentam uma grande variação de tamanho, que pode ir de poucos milímetros até aproximadamente 40 cm nas espécies maiores. 
                             Eles vivem em fundo consolidado, lodoso ou ainda arenoso, onde cavam seus buracos ou aproveitam-se dos orifícios deixados por outros animais para neles se instalar. 
-                            São animais exclusivamente carnívoros, alimentando-se de camarões, caranguejos, moluscos, peixes e até mesmo outros da mesma ordem. 
+                            São animais <strong>exclusivamente carnívoros</strong>, alimentando-se de camarões, caranguejos, moluscos, peixes e até mesmo outros da mesma ordem. 
                             O segundo par de patas, muito desenvolvido, é usado tanto para atacar a presa como para se defender. O urópodo, quando aberto, também funciona para defesa, como um escudo, fechando a galeria em que o animal esteja instalado. 
-                            A fêmea desova no local onde se abriga e, em caso de perigo, enrola os ovos como uma bola, prendendo-os junto ao corpo até encontrar um abrigo mais protegido.</p>
-                </section> 
-                <section>
-                    <h4>Fatos interesantes.</h4>
-                    <p>Esses animais possuem o mais complexo sistema de visão de cores do mundo animal, pois enxergam 12 cores primárias, correspondentes aos 12 pigmentos distintos presentes em sua retina.
+                            A fêmea desova no local onde se abriga e, <strong>em caso de perigo</strong>, enrola os ovos como uma bola, prendendo-os junto ao corpo até encontrar um abrigo mais protegido.</p>
+                            <img src="stomatopoa.jpg" alt="Imagem de um Stomatopoda em seu habitat natural.">
+                        </article> 
+                <article>
+                    <h3>Fatos interesantes.</h3>
+                    <p>Esses animais possuem o mais complexo sistema de visão de cores do mundo animal, pois enxergam <strong>12 cores primárias</strong>, correspondentes aos 12 pigmentos distintos presentes em sua retina.
                         Nossos olhos possuem três tipos desses receptores - que correspondem à luz azul, verde e vermelha -, que nos permitem perceber o espectro de cores que vemos. Os cães contam com apenas dois tipos de cones (verde e azul), e é por isso que eles vêm tons de azul, verde e um pouco de amarelo. Muitos anfíbios, répteis, aves e insetos possuem quatro tipo de cones, o que significa que espécies dessas classes conseguem ver cores que o nosso cérebro é incapaz de processar. Algumas espécies específicas de borboletas e possivelmente pombos possuem cinco cones de percepção de cor, o que aumenta ainda mais a quantidade de pigmentos que eles são capazes de perceber. O sistema de visão dos estomatópodes possui doze cones sensíveis à luz e outros quatro que filtram a luz (16 cones no total), o que lhes permite ver cores polarizadas e imagens multiespectrais.</p>
-                </section>
-            </article>
+                        <img src="cores.jpg" alt="Paleta de cores primarias">
+                    </article>
+            </section>
+            <aside>
+                <h4>Informações complementares.</h4>
+                <ul>
+                    <li>Veja o Stomatopoda em ação <a href="https://www.youtube.com/watch?v=E0Li1k5hGBE">aqui</a>.</li>
+                    <li></li>
+                </ul>
+            </aside>
+            <section>
+                <h3>Referências:</h3>
+                <p><a href="https://pt.wikipedia.org/wiki/Stomatopoda">https://pt.wikipedia.org/wiki/Stomatopoda</a></p>
+                <p><a href="">Imagem 1</a></p>
+                <p><a href="">Imagem 2</a></p>
+            </section>
+            <footer>
+                <p>Conteúdo compilado por Henrique Martins, 2021.</p>
+            </footer>
         </main>
     </div>
   </body>
