--- a/fundamentos/bloco-5-DOM-eventos-e-webStorage/exercicios-5-1/exercicio1.html
+++ b/fundamentos/bloco-5-DOM-eventos-e-webStorage/exercicios-5-1/exercicio1.html
@@ -49,6 +49,14 @@
         return paragraph;
       }
       modifiedTextP();
+
+      function modifiedColorTrybe() {
+        let colorSquare = (document.getElementsByTagName(
+          "main"
+        )[0].style.backgroundColor = "#4ca46d");
+        return colorSquare;
+      }
+      modifiedColorTrybe();
       /*
               Aqui você vai modificar os elementos já existentes utilizando apenas as funções:
               - document.getElementById()
