--- a/fundamentos/bloco-5-DOM-eventos-e-webStorage/exercicios-5-1/exercicio1.html
+++ b/fundamentos/bloco-5-DOM-eventos-e-webStorage/exercicios-5-1/exercicio1.html
@@ -57,6 +57,14 @@
         return colorSquare;
       }
       modifiedColorTrybe();
+
+      function modifiedSquareColor() {
+        let squareCenter = (document.querySelector(
+          ".main-content .center-content"
+        ).style.backgroundColor = "white");
+        return squareCenter;
+      }
+      modifiedSquareColor();
       /*
               Aqui você vai modificar os elementos já existentes utilizando apenas as funções:
               - document.getElementById()
