--- a/fundamentos/bloco-5-DOM-eventos-e-webStorage/exercicios-5-1/exercicio1.html
+++ b/fundamentos/bloco-5-DOM-eventos-e-webStorage/exercicios-5-1/exercicio1.html
@@ -65,6 +65,13 @@
         return squareCenter;
       }
       modifiedSquareColor();
+
+      function correctTitle() {
+        let titleCorrect = (document.getElementsByTagName("h1")[0].innerHTML =
+          "Exercício 5.1 - JavaScript!");
+        return titleCorrect;
+      }
+      correctTitle();
       /*
               Aqui você vai modificar os elementos já existentes utilizando apenas as funções:
               - document.getElementById()
