--- a/fundamentos/bloco-5-DOM-eventos-e-webStorage/exercicios-5-1/exercicio1.html
+++ b/fundamentos/bloco-5-DOM-eventos-e-webStorage/exercicios-5-1/exercicio1.html
@@ -72,6 +72,14 @@
         return titleCorrect;
       }
       correctTitle();
+
+      function modifiedTextMaiusculo() {
+        let textMaior = (document.getElementsByTagName(
+          "p"
+        )[0].style.textTransform = "uppercase");
+        return textMaior;
+      }
+      modifiedTextMaiusculo();
       /*
               Aqui você vai modificar os elementos já existentes utilizando apenas as funções:
               - document.getElementById()
