--- a/fundamentos/bloco-5-DOM-eventos-e-webStorage/exercicios-5-1/exercicio1.html
+++ b/fundamentos/bloco-5-DOM-eventos-e-webStorage/exercicios-5-1/exercicio1.html
@@ -80,6 +80,12 @@
         return textMaior;
       }
       modifiedTextMaiusculo();
+
+      function consoleLog() {
+        let tagsPConsole = document.querySelectorAll("p");
+        return console.log(tagsPConsole);
+      }
+      consoleLog();
       /*
               Aqui você vai modificar os elementos já existentes utilizando apenas as funções:
               - document.getElementById()
